kubernetes/setup/keycloak/keycloak.yml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    name: keycloak
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-svc
  namespace: keycloak
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deploy
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak-pod
        image: quay.io/keycloak/keycloak:21.0.2
        args: ["start-dev"]
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /realms/master
            port: 8080
        volumeMounts:
        - name: keycloak-data
          mountPath: /opt/keycloak/data/
      volumes:
      - name: keycloak-data
        persistentVolumeClaim:
          claimName: keycloak-claim
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
  labels:
    app: keycloak 
  annotations:
    cert-manager.io/cluster-issuer: kubelab-issuer
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - secretName: keycloak-secret
    hosts:
    - keycloak.kubelab.local
  rules:
  - host: keycloak.kubelab.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: keycloak-svc
            port:
              number: 8080
